--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <ul class="gallery"></ul>
-    <script type="module" src="./js/1-gallery"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
